*** empty log message ***

--- a/doc/converse/Makefile
+++ b/doc/converse/Makefile
@@ -12,7 +12,10 @@
 # REVISION HISTORY:
 #
 # $Log$
-# Revision 1.3  1995-09-21 21:42:21  milind
+# Revision 1.4  1995-10-10 21:40:41  jyelon
+# *** empty log message ***
+#
+# Revision 1.3  1995/09/21  21:42:21  milind
 # Added latex2html
 #
 # Revision 1.2  1995/09/21  15:37:33  milind
@@ -27,17 +30,23 @@
 #
 ############################################################################
 
-TEXFILES=manual.tex threads.tex queue.tex scheduler.tex ldb.tex cmi.tex
+TEXFILES=manual.tex threads.tex queue.tex scheduler.tex ldb.tex cmi.tex thsync.tex msgmgr.tex
 
 all: manual.ps manual/manual.html
+
+ps-preview: manual.ps
+	ghostview manual.ps
+
+html-preview: manual/manual.html
+	netscape manual/manual.html
 
 manual/manual.html: $(TEXFILES)
 	latex2html manual.tex
 
-manual.ps:	manual.dvi
+manual.ps: manual.dvi
 	dvips -o manual.ps manual.dvi
 
-manual.dvi:	$(TEXFILES)
+manual.dvi: $(TEXFILES)
 	latex manual.tex
 
 co:
