Changed to reflect the new structure of the manual.

--- a/doc/install/Makefile
+++ b/doc/install/Makefile
@@ -12,24 +12,33 @@
 # REVISION HISTORY:
 #
 # $Log$
-# Revision 1.1  1995-09-20 16:26:49  brunner
+# Revision 1.2  1995-10-31 22:33:53  milind
+# Changed to reflect the new structure of the manual.
+#
+# Revision 1.1  1995/09/20  16:26:49  brunner
 # Initial revision
 #
 # Revision 1.2  1995/09/20  16:19:51  brunner
 #
 ############################################################################
 
-TEXFILES=install.tex
+all: manual.ps manual/manual.html
 
-install.ps:	install.dvi
-	dvips -o install.ps install.dvi
+TEXFILES=manual.tex install.tex compile.tex run.tex
 
-install.dvi:	$(TEXFILES)
-	latex install
-	latex install
+manual.ps:	manual.dvi
+	dvips -o manual.ps manual.dvi
+
+manual.dvi:	$(TEXFILES)
+	latex manual
+	latex manual
+
+manual/manual.html: $(TEXFILES)
+	latex2html manual.tex
 
 co:
 	co Makefile $(TEXFILES)
 
 clean:	
 	rm -f *.aux *.log *.dvi *.ps *.idx *.toc *~
+	rm -rf manual
