--- a/doc/install/Makefile
+++ b/doc/install/Makefile
@@ -12,7 +12,10 @@
 # REVISION HISTORY:
 #
 # $Log$
-# Revision 1.2  1995-10-31 22:33:53  milind
+# Revision 1.3  1995-11-16 19:05:03  milind
+# *** empty log message ***
+#
+# Revision 1.2  1995/10/31  22:33:53  milind
 # Changed to reflect the new structure of the manual.
 #
 # Revision 1.1  1995/09/20  16:26:49  brunner
@@ -28,6 +31,7 @@ TEXFILES=manual.tex install.tex compile.tex run.tex
 
 manual.ps:	manual.dvi
 	dvips -o manual.ps manual.dvi
+	cp manual.ps /charm/manuals-comp/install.manual
 
 manual.dvi:	$(TEXFILES)
 	latex manual
